[workspace]
members = [
    "substreams-aelf-core",
    "substreams-aelf",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "Substreams development kit for Solana chains, contains Block model and helpers."
homepage = "https://substreams.streamingfast.io"
repository = "https://github.com/substreams-labs/substreams-aelf"
license = "Apache-2.0"
readme = "README.md"
keywords = ["substreams", "aelf", "streamingfast", "firehose", "thegraph"]
categories = ["api-bindings", "external-ffi-bindings", "wasm"]
rust-version = "1.60"

[workspace.dependencies]
substreams-aelf = { path = "./substreams-aelf" }
substreams-aelf-core = { path = "./core" }
