[package]
name = "aelf-types"
version.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
bs58 = "0.5.1"
prost = { version = "0.13" }
prost-types = "0.13"
sha2 = "0.10.8"
hex = "0.4.3"

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
