[package]
name = "substreams-aelf"
version.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
substreams = "0.6"
substreams-aelf-core = { workspace = true }
