[package]
name = "substreams-aelf"
version.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
bs58 = "0.4.0"
sha2 = "0.10.2"
substreams = "0.6"
substreams-aelf-core = { workspace = true }
prost = "0.13.3"

[dev-dependencies]
